# dreamlayer

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DREAM_MODE.md  FIRST_DEVICE_TEST_PLAN.md  README.md  main.py  start.bat  start.sh  test_local.sh
host-python/: .coverage  README.md  pyproject.toml
host-python/packaging/: setup_app.py
host-python/src/dreamlayer/: __init__.py  __main__.py  capabilities.py  cli.py  config.py  lenses.py  logging_setup.py  main.py  pairing.py  pairing_ratelimit.py  rosetta.py  rosetta_argos.py  saga.py
host-python/src/dreamlayer/ai_brain/: __init__.py  brains.py  exo_cluster.py  gemma_backend.py  litellm_backend.py  menubar.py  mlx_backend.py  perception.py  router.py  schema.py  server_fastapi.py  verify.py  webview_window.py  world_check.py
host-python/src/dreamlayer/bridge/: base.py  emulator_bridge.py  frame_sdk.py  lua_loader.py  lua_raster.py  noa_patterns.py  real_bridge.py
host-python/src/dreamlayer/confluence/: __init__.py  beacon.py  bond.py  crossing.py  duet.py  emitter_pyee.py  entangle.py  gift.py  mesh.py  relay_transport.py  taps.py  tincan.py
host-python/src/dreamlayer/demo/: AI_VIDEO.md  README.md  STORYBOARDS.md  __init__.py  __main__.py  catalog.py  emissive.py  plate.py  scene.py  storyboards.py
host-python/src/dreamlayer/dream_mode/: __init__.py  engine.py  ghost_layer.py  imu_eyemu.py  imu_reactor.py  inner_weather.py  mic_reactor.py  premonition.py  prism.py  scene_describer.py  scene_lostfound.py  sprite_bridge.py  timbre_reactor.py  track_supervision.py  weather_river.py
host-python/src/dreamlayer/ember/: store.py
host-python/src/dreamlayer/hud/: audio.py  cards.py  export.py  export_cinema_v2_golden.py  export_cinema_v2_prototypes.py  golden_images.py  motion_math.py  render_skia.py  renderer.py  spatial_audio.py  themes.py
host-python/src/dreamlayer/lucid_recall/: __init__.py  index_adapter.py  mem0_layer.py  router.py  schema.py  usearch_router.py
host-python/src/dreamlayer/memory/: ann_index.py  chroma_store.py  datasette_app.py  db.py  doc_schema.py  embedder_local.py  embedder_static.py  embeddings.py  lance_store.py  localrecall_api.py  models_pydantic.py  pii_presidio.py  privacy.py  proactive.py  retention.py  retrieval.py  ring_buffer.py  vector_store.py
host-python/src/dreamlayer/object_lens/: __init__.py  bench.py  classify_backends.py  label.py  lens.py  palette_extract.py  polled.py  providers.py  recognizer.py  schema.py  translate.py
host-python/src/dreamlayer/orchestrator/: __init__.py  _ops_helpers.py  _ops_host.py  adaptive_confidence.py  answer_ahead.py  answer_validate.py  anticipation.py  asr_faster_whisper.py  attention.py  budgets.py  capability_log.py  capture.py  capture_provenance.py  commands.py  commitment_drift.py  commitment_nlp.py  concurrency_anyio.py  consistency.py  conversation.py  frame_budget.py  fs_watch.py  glance.py  health.py  horizon_composer.py  intents.py  maturity.py  ops_brain_switches.py  ops_commitments.py  ops_confluence.py  ops_conversation.py  ops_dream_rem.py  ops_ember.py  ops_ingest.py  ops_juno_attention.py  ops_messages.py  ops_plugins.py  ops_stasis.py  ops_world_lenses.py  orchestrator.py  passive_injector.py  (+19 more)
host-python/src/dreamlayer/pipelines/: ingest.py  lsl_transport.py  vision.py
host-python/src/dreamlayer/plugins/: __init__.py  base.py  currency.py  events.py  filler.py  hookspecs.py  isolation.py  openfoodfacts.py  os_sandbox.py  package.py  packs.py  reactions.py  registry_trust.py  sandbox_child.py  social.py  store.py  validate.py  vinyl_oracle.py  wasm_component_host.py  wasm_host.py
host-python/src/dreamlayer/reality_compiler/: __init__.py  intent_parser_llm.py  pipeline_pydanticai.py  sign_crypto.py
host-python/src/dreamlayer/rem/: __init__.py  adapter_gate.py  bias.py  cycle.py  egolife_index.py  nightly.py  nightly_mlx.py  spatial_anchor.py
host-python/src/dreamlayer/sdk/: __init__.py  discovery.py  preview.py
host-python/src/dreamlayer/simulator/: __init__.py  core.py  glass_desk.py  page.py  rerun_viz.py  scenarios.py  server.py
host-python/src/dreamlayer/social_lens/: __init__.py  analyzer.py  diarize_diart.py  embedder.py  enricher.py  graph.py  index.py  introduction.py  ner_spacy.py  renderer.py  schema.py  timbre.py
host-python/src/dreamlayer/testkit/: __init__.py  dst.py
host-python/src/dreamlayer/tests/: test_adapter_gate.py  test_ai_brain.py  test_ai_brain_macos.py  test_ai_brain_server.py  test_attention.py  test_ble_loopback.py  test_brain_auth_posture.py  test_brain_capabilities.py  test_brain_controls.py  test_brain_plugins.py  test_brain_rc.py  test_brain_tiers.py  test_bridge_privacy.py  test_budgets_boundaries.py  test_cadence.py  test_capabilities.py  test_capability_log.py  test_capture_pipeline.py  test_catalog.py  test_cinema_v2_golden.py  test_cli.py  test_cli_ember.py  test_cli_golf.py  test_cli_memories.py  test_cli_memories_trinity.py  test_cloud_providers.py  test_cloud_seams.py  test_cloud_view.py  test_commitment_drift.py  test_concurrency_locks.py  test_config.py  test_confluence.py  test_contracts_unit.py  test_conversation.py  test_conversation_cards_solid.py  test_debt_tracker.py  test_demo_export.py  test_diagnostics.py  test_diff_interpreters.py  test_docent.py  (+169 more)
host-python/src/dreamlayer/truth_lens/: __init__.py  analyzer.py  au_backends.py  au_detector.py  causal_fusion.py  face_embed.py  fusion.py  linguistic.py  narrative_store.py  prosody.py  prosody_whisperx.py  renderer.py  schema.py
host-python/src/memoscape/: __init__.py  config.py  main.py
host-python/src/memoscape/app/: answer_builder.py  commitment_drift.py  intents.py  orchestrator.py  passive_capture.py  passive_injector.py  recall_context.py  state.py  tell.py  time_scrub.py
host-python/src/memoscape/bridge/: base.py  emulator_bridge.py  lua_loader.py  real_bridge.py
host-python/src/memoscape/face_recall/: __init__.py  analyzer.py  embedder.py  enricher.py  index.py  (+2 more)
reality-core/: Cargo.toml  README.md
reality-core/parity/: wasm_parity.mjs
reality-core/src/: lib.rs  stage.rs
(+628 files in other folders)
