[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "dreamlayer"
version = "0.6.1"
description = "Memory engine for Brilliant Labs Halo glasses"
requires-python = ">=3.11"
dependencies = [
    "Pillow>=10",
    "numpy>=1.26",
    "openai>=1.30",
]

[project.optional-dependencies]
# lupa runs the halo-lua test suites (pinned to lupa.lua53 = device Lua)
dev      = ["pytest>=8", "pytest-asyncio>=0.23", "lupa>=2.0"]
hardware = ["brilliant-ble", "brilliant-msg"]
dream    = ["brilliant-msg", "Pillow>=10"]   # pip install dreamlayer[dream]

[tool.setuptools.package-data]
# ship the control-panel imagery (cinematic stills, HUD explainer thumbnails)
# so it's installed with the package and lands in the py2app .dmg bundle.
dreamlayer = [
    "ai_brain/server/assets/*.webp",
    "ai_brain/server/assets/*.png",
    "ai_brain/server/assets/*.woff2",
]

[tool.pytest.ini_options]
testpaths = ["src/dreamlayer/tests", "src/dreamlayer/tests"]
