[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "dreamlayer"
version = "0.6.1"
description = "Memory engine for Brilliant Labs Halo glasses"
license = {text = "Apache-2.0"}
requires-python = ">=3.11"
dependencies = [
    "Pillow>=10",
    "numpy>=1.26",
    "openai>=1.30",
]

[project.optional-dependencies]
# lupa runs the halo-lua test suites (pinned to lupa.lua53 = device Lua)
dev      = ["pytest>=8", "pytest-asyncio>=0.23", "lupa>=2.0", "pytest-benchmark>=4", "hypothesis>=6"]
hardware = ["brilliant-ble", "brilliant-msg"]
dream    = ["brilliant-msg", "Pillow>=10"]   # pip install dreamlayer[dream]

# --- Optional integration groups (adapters lazy-import these; every one has a
#     working fallback, so the core system runs with none of them installed) ---
memory   = ["sqlite-vec", "chromadb", "sentence-transformers", "mem0ai", "lancedb", "usearch", "docarray", "networkx"]
voice    = ["silero-vad", "faster-whisper", "openwakeword", "sounddevice"]
asr-extra = ["whisperx"]
structured = ["outlines", "instructor", "pydantic>=2", "pydantic-ai"]
llm      = ["litellm"]
intelligence = ["speechbrain", "spacy", "river", "human-learn", "supervision"]
vision   = ["ultralytics", "moondream", "open-clip-torch", "coremltools; sys_platform=='darwin'"]
causal   = ["dowhy"]
infra    = ["rich", "watchdog", "zeroconf", "datasette", "rerun-sdk"]
privacy  = ["cryptography", "presidio-analyzer", "presidio-anonymizer", "anyio"]
platform = ["pluggy", "pyee", "argostranslate", "skia-python", "fastapi", "uvicorn", "frame-sdk", "pylsl", "mlx; sys_platform=='darwin'", "mlx-lm; sys_platform=='darwin'"]

# --- Deployment profiles: one install per target, composed from the groups
#     above via self-referential extras. Pick ONE per machine:
#       pip install -e ".[profile-mac]"        (or: uv sync --extra profile-mac)
#     `python -m dreamlayer.capabilities` then reports what switched on.
#     tests/test_capabilities.py asserts these stay in sync with capabilities.py. ---
profile-halo  = ["dreamlayer[hardware]"]                       # bridge host next to the glasses: BLE only
profile-phone = ["dreamlayer[memory,voice,structured,llm]"]    # pocket hub: local recall + STT, no heavy vision
profile-mac   = ["dreamlayer[memory,voice,asr-extra,structured,llm,intelligence,vision,causal,infra,privacy,platform]"]  # the full Brain
profile-cloud = ["dreamlayer[structured,llm,intelligence,causal,privacy]"]  # remote runner: reasoning, no device/local-model stack

[tool.setuptools.package-data]
# ship the control-panel imagery (cinematic stills, HUD explainer thumbnails)
# so it's installed with the package and lands in the py2app .dmg bundle.
dreamlayer = [
    "ai_brain/server/assets/*.webp",
    "ai_brain/server/assets/*.png",
    "ai_brain/server/assets/*.woff2",
]

[tool.pytest.ini_options]
testpaths = ["src/dreamlayer/tests", "src/dreamlayer/tests"]
markers = [
    "hardware: needs a real Halo device / hardware deps (deselected in CI)",
    "benchmark: latency-budget test via pytest-benchmark (deselected in CI)",
]
