[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "dreamlayer"
version = "0.6.1"
description = "Memory engine for Brilliant Labs Halo glasses"
license = {text = "Apache-2.0"}
requires-python = ">=3.11"
dependencies = [
    "Pillow>=10",
    "numpy>=1.26",
    "openai>=1.30",
]

# The `dreamlayer` CLI: build, validate, package, and install plugins.
# Stdlib-only, so it ships with the base install.
[project.scripts]
dreamlayer = "dreamlayer.cli:main"

[project.optional-dependencies]
# lupa runs the halo-lua test suites (pinned to lupa.lua53 = device Lua)
dev      = ["pytest>=8,<10", "pytest-asyncio>=0.23,<2", "lupa>=2.0,<3", "pytest-benchmark>=4,<6", "hypothesis>=6,<7", "pytest-cov>=4,<8", "qrcode>=7,<9", "ruff>=0.5,<1", "mypy>=1.8,<3"]
# proofs: CrossHair symbolically verifies the on-glass safety caps in
# reality_compiler/v2/contracts.py (skipped when crosshair-tool is absent).
verify   = ["crosshair-tool>=0.0.60,<1"]
# mutation: mutmut mutation-tests the safety core — proves the tests actually
# catch bugs, not just pass. Run on demand: see .github/workflows/mutation.yml.
mutation = ["mutmut>=3.0,<4"]
hardware = ["brilliant-ble>=3,<4", "brilliant-msg>=7,<8"]
dream    = ["brilliant-msg>=7,<8", "Pillow>=10"]   # pip install dreamlayer[dream]

# --- Optional integration groups (adapters lazy-import these; every one has a
#     working fallback, so the core system runs with none of them installed) ---
memory   = ["sqlite-vec>=0.1,<1", "chromadb>=1,<2", "sentence-transformers>=5,<6", "model2vec>=0.8,<1", "mem0ai>=2,<3", "lancedb>=0.34,<1", "usearch>=2,<3", "docarray>=0.41,<1", "networkx>=3,<4"]
voice    = ["silero-vad>=6,<7", "faster-whisper>=1,<2", "openwakeword>=0.6,<1", "sounddevice>=0.5,<1", "sherpa-onnx>=1,<2"]
asr-extra = ["whisperx>=3,<4"]
structured = ["outlines>=1,<2", "instructor>=1,<2", "pydantic>=2,<3", "pydantic-ai>=0.8,<1"]
llm      = ["litellm>=1,<2"]
intelligence = ["speechbrain>=1,<2", "spacy>=3,<4", "river>=0.23,<1", "human-learn>=0.3,<1", "supervision>=0.29,<1"]
vision   = ["ultralytics>=8,<9", "moondream>=1,<2", "open-clip-torch>=3,<4", "coremltools>=9,<10; sys_platform=='darwin'", "mlx-vlm>=0.6,<1; sys_platform=='darwin'"]
causal   = ["dowhy>=0.11,<1"]
# serverless, conflict-free multi-device Vault sync (reality_compiler/v2/vault_sync.py)
sync     = ["loro>=1.0,<2"]
infra    = ["rich>=14,<16", "watchdog>=6,<7", "zeroconf>=0.150,<1", "datasette>=0.65,<1", "rerun-sdk>=0.34,<1"]
# Security-critical: keep a floor below which known CVEs live (audit 2026-07-14).
# cryptography>=48.0.1 clears GHSA-537c-gmf6-5ccf (the unconstrained resolver
# otherwise settles on the vulnerable 46.0.7); presidio floors match the modern
# analyzer API. pip-audit (dep-audit.yml) gates the rest.
privacy  = ["cryptography>=48.0.1,<50", "presidio-analyzer>=2.2,<3", "presidio-anonymizer>=2.2,<3", "anyio>=4,<5", "c2pa-python>=0.36,<1"]
platform = ["pluggy>=1,<2", "pyee>=13,<14", "argostranslate>=1,<2", "skia-python>=144,<145", "fastapi>=0.139,<1", "uvicorn>=0.51,<1", "frame-sdk>=1,<2", "pylsl>=1,<2", "wasmtime>=46,<47", "cbor2>=6,<7", "mlx>=0.32,<1; sys_platform=='darwin'", "mlx-lm>=0.31,<1; sys_platform=='darwin'"]

# --- Deployment profiles: one install per target, composed from the groups
#     above via self-referential extras. Pick ONE per machine:
#       pip install -e ".[profile-mac]"        (or: uv sync --extra profile-mac)
#     `python -m dreamlayer.capabilities` then reports what switched on.
#     tests/test_capabilities.py asserts these stay in sync with capabilities.py. ---
profile-halo  = ["dreamlayer[hardware]"]                       # bridge host next to the glasses: BLE only
profile-phone = ["dreamlayer[memory,voice,structured,llm]"]    # pocket hub: local recall + STT, no heavy vision
profile-mac   = ["dreamlayer[memory,voice,asr-extra,structured,llm,intelligence,vision,causal,infra,privacy,platform]"]  # the full Brain
profile-cloud = ["dreamlayer[structured,llm,intelligence,causal,privacy]"]  # remote runner: reasoning, no device/local-model stack

[tool.uv]
# The brilliant-msg extras (glasses-bridge host: pillow>=11) and the
# moondream/vision extras (Mac Brain: pillow<11) pin incompatible pillow
# ranges. They target different machines — the profiles above say "pick ONE
# per machine" — so declare every cross-machine pair conflicting instead of
# letting the incompatibility block the universal lock.
conflicts = [
    [{ extra = "dream" },        { extra = "vision" }],
    [{ extra = "dream" },        { extra = "profile-mac" }],
    [{ extra = "hardware" },     { extra = "vision" }],
    [{ extra = "hardware" },     { extra = "profile-mac" }],
    [{ extra = "profile-halo" }, { extra = "vision" }],
    [{ extra = "profile-halo" }, { extra = "profile-mac" }],
]

[tool.setuptools.package-data]
# ship the control-panel imagery (cinematic stills, HUD explainer thumbnails)
# so it's installed with the package and lands in the py2app .dmg bundle.
dreamlayer = [
    "ai_brain/server/assets/*.webp",
    "ai_brain/server/assets/*.png",
    "ai_brain/server/assets/*.woff2",
    "py.typed",                       # PEP 561: ship inline types to SDK consumers
]

[tool.ruff]
target-version = "py311"

[tool.ruff.lint]
# Gate on the rules that catch real defects, not house style. The codebase
# deliberately uses compact one-liners (semicolons, colon-bodies) in the data
# layer, so the E7-series style rules are out; pyflakes (F) is the signal —
# unused imports/vars, redefinitions, undefined names, f-strings with no
# placeholder — plus E9 (syntax/IO errors). A clean tree here means a
# contributor can't quietly land dead code.
select = ["F", "E9"]

[tool.ruff.lint.per-file-ignores]
# Package __init__.py files re-export their public surface; those imports are
# "unused" only to a linter.
"__init__.py" = ["F401"]
# Tests routinely bind an intermediate to name a step (`before = count()`), so
# unused-local (F841) is noise there; the source tree is held to it.
"src/dreamlayer/tests/*" = ["F841"]

[tool.mypy]
# The whole `dreamlayer` package is type-checked in CI (was 4 of 323 files
# behind --follow-imports=skip; audit 2026-07-14, Type-Safety C+ -> A-). A
# pragmatic baseline — NOT --strict: untyped function bodies aren't forced, but
# every annotation that *is* written is held to, and the mixin<->host contract
# (orchestrator ops_*/_ops_host, ai_brain brain_*/_brain_host) is now enforced.
python_version = "3.11"
# src/ layout: makes both `mypy src/dreamlayer` and `mypy -p dreamlayer` work.
mypy_path = "src"
explicit_package_bases = true
# Optional integration deps (presidio, loro, brilliant-ble, sherpa, watchdog,
# …) are absent in the typecheck env by design; every adapter has a fallback.
ignore_missing_imports = true
# Type the whole tree without cascading into deliberately-untyped third-party
# internals — the imports themselves are still resolved and their public API
# checked.
follow_imports = "silent"

# --- Gradual-typing backlog (ignore_errors) ---------------------------------
# Four leaf/subsystem modules whose types come from dynamic dispatch, an
# untyped optional dependency, or lazy plumbing. Each is documented; the rest
# of the tree (incl. the four safety-core files) is clean and enforced.
[[tool.mypy.overrides]]
module = [
    # QR bit-matrix built as list[list[int|None]] and filled in place — pure
    # plumbing, annotating the None->int transitions carries no correctness.
    "dreamlayer.ai_brain.server.qr",
    # The beat->scene compiler threads several Optionals (beat.parsed, the
    # running scene, duration_sec) through a dynamic walk: a real typing task,
    # not a one-liner.
    "dreamlayer.reality_compiler.v2.choreographer",
    # The NL->BehaviorIntent parser emits runtime-validated strings that mypy
    # can't narrow to the Intent dataclasses' Literal fields (RED/YELLOW, click
    # triggers).
    "dreamlayer.reality_compiler.intent_parser",
    # The BLE transport: its client comes from the optional `brilliant-ble`
    # dependency and is None until a device connects. Hardware-gated and not
    # exercised by the device-free test suite.
    "dreamlayer.bridge.real_bridge",
    # The loro (CRDT) sync bridge: every value read out of a LoroDoc is the deep
    # union `float|int|bytes|str|list[LoroValue]|dict[...]|ContainerID|None`, so
    # each `.get(...)` is a union-attr storm. The audit called this out verbatim
    # — "vault_sync is out on purpose: its types come from loro's LoroValue
    # union, a CRDT-plumbing typing task, not part of the proof."
    "dreamlayer.reality_compiler.v2.vault_sync",
]
ignore_errors = true

# --- Third-party library whose inline (py.typed) stubs are version-volatile
# and NOT our contract to check ---------------------------------------------
# Pillow's stubs move constants between releases (Image.NEAREST/LANCZOS/ADAPTIVE)
# and type PixelAccess/ImageFont as Optional. Following its imports makes the
# gate depend on whether Pillow's stubs are the installed version — the SAME
# `mypy src/dreamlayer` gave 0 errors under one interpreter and 18 PIL errors
# under another. Skipping PIL's import makes every call into it `Any` —
# deterministic across environments — without weakening the checking of OUR
# code, which is what this gate is for.
[[tool.mypy.overrides]]
module = ["PIL", "PIL.*"]
follow_imports = "skip"

[tool.pytest.ini_options]
testpaths = ["src/dreamlayer/tests", "src/dreamlayer/tests"]
markers = [
    "hardware: needs a real Halo device / hardware deps (deselected in CI)",
    "benchmark: latency-budget test via pytest-benchmark (deselected in CI)",
    "real_model: needs heavy ML deps installed (MiniLM/CLIP/moondream); deselected in the default job, run by the real-models workflow",
]

[tool.mutmut]
# Mutation-test the whole on-glass safety core (P2-13 widened this from
# contracts.py alone): the caps the "data, not code" argument rests on
# (contracts.py), the static prover (budgets.py), the WCAG eye-safety analyzer
# (flash_safety.py), and the deploy trust anchor (signer.py). Each file has a
# dedicated killer suite listed below; the CrossHair proofs are complementary
# but blind to mutmut (it swaps the body behind a dispatcher CrossHair's
# source read can't see). vault_sync.py stays out: it needs the loro extra,
# which the mutation runner doesn't install.
#
# memory/privacy.py joins the core (audit 2026-07-14 §7): the privacy gate is
# the product's core safety contract, yet it previously had NO mutation net —
# only the 4-file reality_compiler core did. Mutating it here proves the gate's
# killer suite (test_privacy.py + tests/test_privacy_gate_properties.py) would
# actually catch an OR->AND flip or an incognito-blocks-recall regression, not
# just pass. The @requires_capture/@requires_recall call-site helpers live in
# the same file, so they come under the net for free ("the gate call-sites'
# helper" from the task) — no separate file to configure.
#
# Enforcement (.github/workflows/mutation.yml) is per-file survivor CEILINGS,
# not a blanket zero: contracts.py and signer.py hold at zero survivors, while
# budgets.py and flash_safety.py carry documented non-behavioral residuals
# (mutants of diagnostic message strings and provably-equivalent forms — see
# test_budgets_boundaries.py / test_flash_safety_unit.py docstrings). The
# ceilings are the measured residual counts, so any NEW test hole still fails
# the job while the documented residue doesn't ratchet.
source_paths = ["src/dreamlayer"]
only_mutate = [
    "src/dreamlayer/reality_compiler/v2/contracts.py",
    "src/dreamlayer/reality_compiler/v2/budgets.py",
    "src/dreamlayer/reality_compiler/v2/flash_safety.py",
    "src/dreamlayer/reality_compiler/v2/signer.py",
    "src/dreamlayer/memory/privacy.py",
]
pytest_add_cli_args_test_selection = [
    "src/dreamlayer/tests/test_contracts_unit.py",
    "src/dreamlayer/tests/test_budgets_boundaries.py",
    "src/dreamlayer/tests/test_rc2_budgets.py",
    "src/dreamlayer/tests/test_flash_safety_unit.py",
    "src/dreamlayer/tests/test_flash_safety.py",
    "src/dreamlayer/tests/test_signer_boundaries.py",
    "src/dreamlayer/tests/test_rc2_vault.py",
    "src/dreamlayer/tests/test_privacy.py",
    "src/dreamlayer/tests/test_privacy_gate_properties.py",
]
